# horcrux-notifier

./: .env.example  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  Dockerfile  README.md
migrations/: 0001_init.sql
src/: auth.rs  config.rs  db.rs  error.rs  fcm.rs  lib.rs  main.rs  ratelimit.rs  state.rs
src/routes/: consent.rs  health.rs  mod.rs  push.rs  register.rs
tests/: integration.rs
tests/common/: mod.rs
