[package]
name = "horcrux_notifier"
version = "0.1.0"
edition = "2021"
description = "Push notification relay for Horcrux. Authenticates senders via NIP-98 and forwards to FCM based on recipient consent lists."
license = "MIT"
rust-version = "1.82"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"

secp256k1 = { version = "0.30", features = ["global-context", "rand", "hashes"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"

[features]
default = []
test-util = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
wiremock = "0.6"
rand = "0.8"
horcrux_notifier = { path = ".", features = ["test-util"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
